Update samples, add tests and changlog